modificaciones en el css y html

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>proyecto js</title>    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
     <body class="text-center body_bgColor">
         <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
@@ -16,7 +16,7 @@
             <nav class="nav nav-masthead justify-content-center">
                 <a class="nav-link active" href="../index.html">Home</a>
                 <a class="nav-link" href="../pages/tienda.html">Tienda</a>
-                <a class="nav-link" href="#">Nosotros</a>
+                <a class="nav-link" href="./carrito.html">Carrito</a>
             </nav>
             </div>
         </header>
@@ -25,11 +25,11 @@
             <h1 class="cover-heading">Todo lo que buscas al mejor precio</h1>
             <div class="container">
                 <div class="row pt-5" id="App">
-                    <div class="col-md-12" id="carro"></div>
+                    <div class="  col-md-12 car-carrito " id="carro"></div>
                 </div>
-                <div class="d-grid gap-2 mt-3">
+                <div class="d-grid gap-2 mt-3 ">
                    <input  onclick="return mostrarCarro()" type="submit" value="Mostrar compras " class="btn btn-primary"> </input >
-                  </div>
+                </div>
             </div>
             
         </main>
