--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>proyecto js</title>    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
-    <body class="text-center body_bgColor">
-        <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <body class="text-center body_bgColor d-flex">
+      <div class="container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
             <div class="inner">
             <h3 class="masthead-brand">Blanqueria</h3>
@@ -25,9 +25,9 @@
             <h1 class="cover-heading">Todo lo que buscas al mejor precio</h1>
             <p style="color: red;">e.mail = usuario1     Password= 123456789</p>
             <div class="container">
-                <form id="formularioCompras" class="card-body">
-                <div class="row pt-5" id="App">                   
-                    <div class="col-md-12">
+                <form id="formularioCompras" class="card-body bg-color-card " >
+                <div class="row pt-5 form-indx" id="App">                   
+                    <div class="col-md-8 justify-content-center" >
                       <div class="card mt-5">
                         <div class="mb-3">
                           <!-- mail-->
@@ -61,7 +61,7 @@
            
             </p>-->
         </main>
-        <footer class= " cover-container  futer">
+        <footer class= " cover-container-fluid  futer">
             <div class="row ">
                 <div class="col-lg-4 col-xs-4" >
                 </div>
