--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -20,18 +20,29 @@
             <nav class="nav nav-masthead justify-content-center">
                 <a class="nav-link active" href="../index.html">Home</a>
                 <a class="nav-link" href="./tienda.html">Tienda</a>
-                <a class="nav-link" href="#">Nosotros</a>
+                <a class="nav-link" href="./carrito.html">Carrito</a>
             </nav>
             </div>
         </header>
         
-        <main role="main" class="inner cover">
+        <main role="main" class="containe-fluid">
 
             <div id="containe-fluid" ></div>
             <div class="row" >
                 <div class="col-12">
                     <div id="carProducto" class="bg-cards" >
                     </div>
+                         <!--card carro-->
+            <div class="col d-flex justify-content-center mb-4">
+
+                <div class="card shadow mb-1 rounded" style="width: 15rem;">
+                    <img src="../assets/carrito.jpg"class="card-img-center" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Carrito</h5>
+                    <p id="mensajeValidacion"  class="card-text ">Termina tu compra</p>
+                    <input  onclick="irAlatienda()" type="submit" value="Ir al Carrito" class="btn btn-primary"> </input >
+                    </div>
+                </div>
                 </div>
             </div>
                    
@@ -70,6 +81,7 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
         <script src="../class/producto.js"></script>
+        <script src="../funciones/mostrarCarro.js"></script>
         <script src="../funciones/comprar.js"></script>
         <script src="../funciones/crearCards.js"></script>
         <script src="../home.js"></script>
