--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -28,7 +28,7 @@
                     <div class="  col-md-12 car-carrito " id="carro"></div>
                 </div>
                 <div class="d-grid gap-2 mt-3 ">
-                   <input  onclick=" mostrarCompra()" type="submit" value="Mostrar compras " class="btn btn-primary"> </input >
+                   <input   onclick=" mostrarCompra()" type="submit" value="Mostrar compras " class="btn btn-primary"> </input >
                 </div>
             </div>
             
@@ -57,8 +57,8 @@
             
         </footer> 
         </div>        
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>  
+        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
         <script src="../funciones/comprar.js"></script>
        <script src="../funciones/mostrarCarro.js"></script>
         <script src="../home.js"></script>
