--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -35,7 +35,7 @@
                          <!--card carro-->
             <div class="col d-flex justify-content-center mb-4">
 
-                <div class="card shadow mb-1 rounded" style="width: 15rem;">
+                <div id="card-anima" class="card shadow mb-1 rounded" style="width: 15rem;">
                     <img src="../assets/carrito.jpg"class="card-img-center" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Carrito</h5>
@@ -78,12 +78,12 @@
             
         </footer> 
    
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <script src="../class/producto.js"></script>
-        <script src="../funciones/mostrarCarro.js"></script>
         <script src="../funciones/comprar.js"></script>
         <script src="../funciones/crearCards.js"></script>
+        <script src="../funciones/mostrarCarro.js"></script>
         <script src="../home.js"></script>
     </body>      
 </html>
