agrego boton eliminar

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -18,8 +18,8 @@
             <div class="inner">
             <h3 class="masthead-brand">Blanqueria</h3>
             <nav class="nav nav-masthead justify-content-center">
-                <a class="nav-link active" href="../index.html">Home</a>
-                <a class="nav-link" href="./tienda.html">Tienda</a>
+                <a class="nav-link " href="../index.html">Home</a>
+                <a class="nav-link active" href="./tienda.html">Tienda</a>
                 <a class="nav-link" href="./carrito.html">Carrito</a>
             </nav>
             </div>
@@ -28,21 +28,24 @@
         <main role="main" class="containe-fluid">
 
             <div id="containe-fluid" ></div>
+            <div class="row">
+                <!-- <div class="col-12">
+                    <div id="msjCompra"></div>
+                </div>
+                <div id="msjCompra"></div> -->
+            </div>
             <div class="row" >
                 <div class="col-12">
-                    <div id="carProducto" class="bg-cards" >
-                    </div>
+                    <div id="carProducto" class="bg-cards" ></div>
                          <!--card carro-->
-            <div class="col d-flex justify-content-center mb-4">
-
-                <div id="card-anima" class="card shadow mb-1 rounded" style="width: 15rem;">
-                    <img src="../assets/carrito.jpg"class="card-img-center" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">Carrito</h5>
-                    <p id="mensajeValidacion"  class="card-text ">Termina tu compra</p>
-                    <input  onclick="irAlatienda()" type="submit" value="Ir al Carrito" class="btn btn-primary"> </input >
+                    <div class="col d-flex justify-content-center mb-4"></div>
+                    <div id="card-anima" class="card shadow mb-1 rounded" style="width: 15rem; margin-left: 31%;">
+                        <img src="../assets/carrito.jpg"class="card-img-center" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">Carrito</h5>
+                        <p id="mensajeValidacion"  class="card-text ">Termina tu compra</p>
+                        <input  onclick="irAlatienda()" type="submit" value="Ir al Carrito" class="btn btn-primary"> </input >
                     </div>
-                </div>
                 </div>
             </div>
                    
