--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -14,9 +14,9 @@
             <div class="inner">
             <h3 class="masthead-brand">Blanqueria</h3>
             <nav class="nav nav-masthead justify-content-center">
-                <a class="nav-link active" href="../index.html">Home</a>
+                <a class="nav-link " href="../index.html">Home</a>
                 <a class="nav-link" href="../pages/tienda.html">Tienda</a>
-                <a class="nav-link" href="./carrito.html">Carrito</a>
+                <a class="nav-link active" href="./carrito.html">Carrito</a>
             </nav>
             </div>
         </header>
@@ -24,10 +24,31 @@
         <main role="main" class="inner cover">
             <h1 class="cover-heading">Todo lo que buscas al mejor precio</h1>
             <div class="container">
-                <div class="row pt-5" id="App">
-                    <div class="  col-md-12 car-carrito " id="carro"></div>
+
+                <div class="car-carrito">
+
+                    <div class="row pt-5" id="App">
+                        <div class="  col-md-12  " >
+                            <table class="table" id="carro">
+                                <thead>
+                                  <tr>
+                                    <th scope="col">Nombre</th>
+                                    <th scope="col">Precio</th>
+                                    <th scope="col">Tipo</th>
+                                    <th scope="col"></th>
+                                  </tr>
+                                </thead>
+                                <tbody> </tbody>                                
+                              </table>
+                        </div>
+                        <div class="d-grid gap-2 mt-3 ">
+        
+                        </div>`        
+                    </div>
+
                 </div>
-                <div class="d-grid gap-2 mt-3 ">
+
+                <div class="row d-grid gap-2 mt-3 justify-content-center ">
                    <input   onclick=" mostrarCompra()" type="submit" value="Mostrar compras " class="btn btn-primary"> </input >
                 </div>
             </div>
@@ -59,6 +80,7 @@
         </div>        
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+        <script src="../class/producto.js"></script>
         <script src="../funciones/comprar.js"></script>
        <script src="../funciones/mostrarCarro.js"></script>
         <script src="../home.js"></script>
