--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -47,9 +47,10 @@
                     </div>
 
                 </div>
-
+                <h3><p id="mensajeVolver"></p></h3>
                 <div class="row d-grid gap-2 mt-3 justify-content-center ">
-                   <input   onclick=" mostrarCompra()" type="submit" value="Mostrar compras " class="btn btn-primary"> </input >
+                   
+                   <input   onclick=" volverAlatienda()" type="submit" value="Comprar Mas " class="btn btn-primary"> </input >
                 </div>
             </div>
             
@@ -82,7 +83,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
         <script src="../class/producto.js"></script>
         <script src="../funciones/comprar.js"></script>
-       <script src="../funciones/mostrarCarro.js"></script>
+        <script src="../funciones/crearCards.js"></script>
+        <script src="../funciones/mostrarCarro.js"></script>
         <script src="../home.js"></script>
     </body>      
 </html>
