--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -29,10 +29,9 @@
 
             <div id="containe-fluid" ></div>
             <div class="row">
-                <!-- <div class="col-12">
-                    <div id="msjCompra"></div>
+                <div class="col-12">
+                    <div class="msjCompra"></div>
                 </div>
-                <div id="msjCompra"></div> -->
             </div>
             <div class="row" >
                 <div class="col-12">
