--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -28,12 +28,14 @@
                 <div class="car-carrito">
 
                     <div class="row pt-5" id="App">
+
                         <div class="  col-md-12  " >
                             <table class="table" id="carro">
                                 <thead>
                                   <tr>
                                     <th scope="col">Nombre</th>
                                     <th scope="col">Precio</th>
+                                    <p class=comprado ></p>
                                     <th scope="col">Tipo</th>
                                     <th scope="col"></th>
                                   </tr>
